--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
+# Node
 node_modules/
 
+# Env
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+npm-debug.log*
+
+# SASS
 .sass-cache/
 *.css.map
 *.sass.map
