--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
   "homepage": "https://github.com/ghamelin/mern-todo#readme",
   "dependencies": {
     "@stytch/vanilla-js": "^2.0.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0"
   },
   "devDependencies": {
