--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,18 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-cookie": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.15.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "universal-cookie": "^6.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
